# caddy_robot

./: README.md
caddyPkg/bluetooth_serial/: CMakeLists.txt  mainpage.dox  package.xml
caddyPkg/bluetooth_serial/src/: main.cpp  main_window.cpp  qnode.cpp
caddyPkg/bluetooth_serial/ui/: main_window.ui
caddyPkg/caddy_navigation/: CMakeLists.txt  mainpage.dox  package.xml
caddyPkg/caddy_navigation/include/caddy_navigation/: main_window.hpp  mobile_kinematics.h  potential_field.h  qnode.hpp
caddyPkg/caddy_navigation/resources/: images.qrc
caddyPkg/caddy_navigation/src/: main.cpp  main_window.cpp  mobile_kinematics.cpp  potential_field.cpp  qcustomplot.cpp  qnode.cpp
caddyPkg/caddy_navigation/ui/: main_window.ui
caddyPkg/caddy_serial/: CMakeLists.txt  mainpage.dox  package.xml
caddyPkg/caddy_serial/GPS data/: GPS_data_BT.txt  GPS_data_robot.txt
caddyPkg/caddy_serial/launch/: caddy_serial.launch  serial.launch
caddyPkg/caddy_serial/resources/: images.qrc
caddyPkg/caddy_serial/src/: main.cpp  main_window.cpp  qnode.cpp
caddyPkg/caddy_serial/ui/: main_window.ui
caddyPkg/gps_serial/: CMakeLists.txt  mainpage.dox  package.xml
caddyPkg/gps_serial/src/: main.cpp  main_window.cpp  qnode.cpp
caddyPkg/gps_serial/ui/: main_window.ui
caddyPkg/mw_ahrsv1/: CMakeLists.txt  mainpage.dox  package.xml
caddyPkg/mw_ahrsv1/resources/: images.qrc
caddyPkg/mw_ahrsv1/src/: main.cpp  main_window.cpp  (+1 more)
caddyPkg/serial_mcu/: CMakeLists.txt  package.xml
caddy_msg/: CMakeLists.txt  package.xml
caddy_msg/msg/: imu_msg.msg  odomPos.msg  remote.msg  wheel_msg.msg
(+16 files in other folders)
